--- a/register.html
+++ b/register.html
@@ -5,10 +5,20 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Registrate</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styleR.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <section class="form-registro">
+        <h4>Registro</h4>
+        <!-- campos de ingresar los datos y que sea obligatorio -->
+        <input class="diseño" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre" required> 
+        <input class="diseño"  type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido" required>
+        <input class="diseño" type="email" name="correo" id="correo" placeholder="Ingrese su Correo electronico" required>
+        <input class="diseño" type="password" name="contraseña" id="contraseña" placeholder="Ingrese una Contraseña" required>
+        <p>Bienvendido</p>
+        <input class="botons" type="submit" value="Registrarse">
+        <p><a href="#">¿Ya Tengo Cuenta?</a></p>
+    </section>
 </body>
 </html>
