--- a/register.html
+++ b/register.html
@@ -12,10 +12,10 @@
     <section class="form-registro">
         <h4>Registro</h4>
         <!-- campos de ingresar los datos y que sea obligatorio -->
-        <input class="diseño" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre" required> 
-        <input class="diseño"  type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido" required>
-        <input class="diseño" type="email" name="correo" id="correo" placeholder="Ingrese su Correo electronico" required>
-        <input class="diseño" type="password" name="contraseña" id="contraseña" placeholder="Ingrese una Contraseña" required>
+        <input class="diseño" type="text" name="nombres" id="nombres" placeholder="Nombre" required> 
+        <input class="diseño"  type="text" name="apellidos" id="apellidos" placeholder="Apellido" required>
+        <input class="diseño" type="email" name="correo" id="correo" placeholder="Correo electronico" required>
+        <input class="diseño" type="password" name="contraseña" id="contraseña" placeholder="Contraseña" required>
         <p>Bienvendido</p>
         <input class="botons" type="submit" value="Registrarse">
         <p><a href="#">¿Ya Tengo Cuenta?</a></p>
