--- a/inicio.html
+++ b/inicio.html
@@ -5,10 +5,32 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Cifrado y Descifrado con AES</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='styleI.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <header>
+        <h1 class="logo">Mi Sitio Web</h1>
+        <nav>
+          <ul>
+            <li><a href="#" class="inicio">Inicio</a></li>
+            <li><a href="#" class="acerca">Acerca de</a></li>
+            <li><a href="#" class="servicios">Servicios</a></li>
+            <li><a href="#" class="contacto">Contacto</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div class="bloque-contenido">
+        
+      </div>
+      <footer>
+        <div class="footer-content">
+          <p>&copy; 2024 Mi Sitio Web. Todos los derechos reservados.</p>
+          <ul class="footer-links">
+            <li><a href="#">Política de privacidad</a></li>
+            <li><a href="#">Términos y condiciones</a></li>
+          </ul>
+        </div>
+      </footer>
 </body>
 </html>
