--- a/inicio.html
+++ b/inicio.html
@@ -10,13 +10,12 @@
 </head>
 <body>
     <header>
-        <h1 class="logo">Mi Sitio Web</h1>
+        <h1 class="logo">Cifrado AES</h1>
         <nav>
-          <ul>
-            <li><a href="#" class="inicio">Inicio</a></li>
-            <li><a href="#" class="acerca">Acerca de</a></li>
-            <li><a href="#" class="servicios">Servicios</a></li>
-            <li><a href="#" class="contacto">Contacto</a></li>
+          <ul class="nav__links">
+            <li><a href="#">Inicio</a></li>
+            <li><a href="register.html">Registrarse</a></li>
+            <li><a href="login.html">Iniciar Sesion</a></li>
           </ul>
         </nav>
       </header>
@@ -25,10 +24,8 @@
       </div>
       <footer>
         <div class="footer-content">
-          <p>&copy; 2024 Mi Sitio Web. Todos los derechos reservados.</p>
+          <p>&copy; 2024 Cifrado AES. Todos los derechos reservados.</p>
           <ul class="footer-links">
-            <li><a href="#">Política de privacidad</a></li>
-            <li><a href="#">Términos y condiciones</a></li>
           </ul>
         </div>
       </footer>
