--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
   <body>
     <div class="bloque-login">
         <form action="">
-            <h1>Iniciar sesión</h1>
+            <h2>Iniciar sesión</h2>
             
             <div class="input-box">
                 <input type="text" placeholder="Nombre" required>
@@ -25,8 +25,8 @@
 
             <button type="submit" class="btn">Confirmar</button>
 
-            <div class="register-link"></div>
-                <p>¿No tienes cuenta todavia?<a href="#">Registrarse</a></p>
+            <div class="register-link">
+                <p>¿No tienes cuenta todavia?<a href="#"> Registrarse</a></p>
             </div>
         </form>
     </div>
