--- a/inicio.html
+++ b/inicio.html
@@ -19,8 +19,20 @@
           </ul>
         </nav>
       </header>
-      <div class="bloque-contenido">
-        
+      <div class="separador">
+        <div class="separacion">
+          <h2 class="centrado" class="separacion">Cifrar</h2>
+          <div class="input-box">
+            <input type="text" placeholder="Texto a cifrar" required>
+            <i class='bx bx-user'></i>
+          </div>
+        <div>
+          <h2 class="centrado">Descifrar</h2>
+          <div class="input-box">
+            <input type="text" placeholder="Texto a descifrar" required>
+            <i class='bx bx-user'></i>
+          </div>
+        </div>
       </div>
       <footer>
         <div class="footer-content">
