--- a/inicio.html
+++ b/inicio.html
@@ -21,18 +21,20 @@
       </header>
       <div class="separador">
         <div class="separacion">
-          <h2 class="centrado" class="separacion">Cifrar</h2>
+          <h2 class="centrado">Cifrar</h2>
           <div class="input-box">
             <input type="text" placeholder="Texto a cifrar" required>
             <i class='bx bx-user'></i>
           </div>
-        <div>
+          </div>
+        <div class="separacion">
           <h2 class="centrado">Descifrar</h2>
           <div class="input-box">
             <input type="text" placeholder="Texto a descifrar" required>
             <i class='bx bx-user'></i>
           </div>
         </div>
+      </div>
       </div>
       <footer>
         <div class="footer-content">
