--- a/inicio.html
+++ b/inicio.html
@@ -22,19 +22,25 @@
       <div class="separador">
         <div class="separacion">
           <h2 class="centrado">Cifrar</h2>
+          <p>
+            Ingrese el texto que desee cifrar:
+          </p>
           <div class="input-box">
             <input type="text" placeholder="Texto a cifrar" required>
             <i class='bx bx-user'></i>
           </div>
-          </div>
+        </div>
         <div class="separacion">
           <h2 class="centrado">Descifrar</h2>
+          <p>
+            Ingrese el texto que desee descifrar:
+          </p>
           <div class="input-box">
             <input type="text" placeholder="Texto a descifrar" required>
             <i class='bx bx-user'></i>
           </div>
-        </div>
       </div>
+        </div>
       </div>
       <footer>
         <div class="footer-content">
