--- a/register.html
+++ b/register.html
@@ -14,11 +14,11 @@
         <!-- campos de ingresar los datos y que sea obligatorio -->
         <input class="diseño" type="text" name="nombres" id="nombres" placeholder="Nombre" required> 
         <input class="diseño"  type="text" name="apellidos" id="apellidos" placeholder="Apellido" required>
-        <input class="diseño" type="email" name="correo" id="correo" placeholder="Correo electronico" required>
+        <input class="diseño" type="email" name="correo" id="correo" placeholder="Correo electrónico" required>
         <input class="diseño" type="password" name="contraseña" id="contraseña" placeholder="Contraseña" required>
-        <p>Bienvendido</p>
+        <p>Bienvenido</p>
         <input class="botons" type="submit" value="Registrarse">
-        <p><a href="#">¿Ya Tengo Cuenta?</a></p>
+        <p><a href="#">¿Ya tiene una cuenta?</a></p>
     </section>
 </body>
 </html>
