--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             <button type="submit" class="btn">Confirmar</button>
 
             <div class="register-link"></div>
-                <p>¿No tienes cuenta todavia?<a href="#">Registrarse</a></p>
+                <p>¿No tienes una cuenta todavía? <a href="#">Registrarse</a></p>
             </div>
         </form>
     </div>
