--- a/inicio.html
+++ b/inicio.html
@@ -20,6 +20,16 @@
         </nav>
       </header>
       <div class="separador">
+        <div class="separacion2">
+        <h2 class="centrado">Contraseña:</h2>
+        <p>Ingrese la contraseña para poder realizar la encriptación o desencriptación.</p>
+        <div class="input-box">
+          <input type="text" placeholder="Contraseña" required>
+          <i class='bx bx-user'></i>
+        </div>
+      </div>
+      </div>
+      <div class="separador">
         <div class="separacion">
           <h2 class="centrado">Cifrar</h2>
           <p>
@@ -29,6 +39,7 @@
             <input type="text" placeholder="Texto a cifrar" required>
             <i class='bx bx-user'></i>
           </div>
+          <button type="submit" class="btn">Cifrar</button>
         </div>
         <div class="separacion">
           <h2 class="centrado">Descifrar</h2>
@@ -39,9 +50,12 @@
             <input type="text" placeholder="Texto a descifrar" required>
             <i class='bx bx-user'></i>
           </div>
+          <button type="submit" class="btn">Descifrar</button>
       </div>
         </div>
-      </div>
+        <div class="separador">
+          
+        </div>
       <footer>
         <div class="footer-content">
           <p>&copy; 2024 Cifrado AES. Todos los derechos reservados.</p>
