--- a/inicio.html
+++ b/inicio.html
@@ -15,7 +15,7 @@
           <ul class="nav__links">
             <li><a href="#">Inicio</a></li>
             <li><a href="register.html">Registrarse</a></li>
-            <li><a href="login.html">Iniciar Sesion</a></li>
+            <li><a href="login.html">Iniciar Sesión</a></li>
           </ul>
         </nav>
       </header>
@@ -54,7 +54,18 @@
       </div>
         </div>
         <div class="separador">
-          
+          <div class="separacion">
+            <p>
+              Resultado:
+            </p>
+            <textarea id="resultadoCifrar" readonly></textarea>
+          </div>
+          <div class="separacion">
+            <p>
+              Resultado:
+            </p>
+            <textarea id="resultadoDescifrar" readonly></textarea>
+          </div>
         </div>
       <footer>
         <div class="footer-content">
