--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
     <div class="bloque-login">
         <form action="">
-            <h1>Iniciar sesión</h1>
+            <h1 class="centrado">Iniciar sesión</h1>
             
             <div class="input-box">
                 <input type="text" placeholder="Nombre" required>
