--- a/login.html
+++ b/login.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Inicio de Sesión</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
-    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"/>
-    <script src="main.js"></script>
-  </head>
-  <body>
 
-    <div class="bloque-login">
-        <form action="">
-            <h1>Iniciar sesión</h1>
-            
-            <div class="input-box">
-                <input type="text" placeholder="Nombre" required>
-                <i class='bx bx-user'></i>
-            </div>
-            <div class="input-box">
-                <input type="password" placeholder="Contraseña" required>
-                <i class='bx bx-lock-alt'></i>
-            </div>
-
-            <button type="submit" class="btn">Confirmar</button>
-
-            <div class="register-link"></div>
-                <p>¿No tienes cuenta todavia?<a href="#">Registrarse</a></p>
-            </div>
-        </form>
-    </div>
-  </body>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Inicio de Sesión</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" /> 
+  <script src="main.js"></script>
+</head>
+<body>
+  <div class="bloque-login">
+    <form action="">
+      <h1>Iniciar sesión</h1>
+      <div class="input-box">
+        <input id="name" type="text" placeholder="Nombre" required>
+        <i class='bx bx-user'></i>
+      </div>
+      <div class="input-box">
+        <input id="password" type="password" placeholder="Contraseña" required>
+        <i class='bx bx-lock-alt'></i>
+      </div>
+      <button id="submit" type="submit" class="btn">Confirmar</button>
+      <div class="register-link">
+        <p>¿No tienes cuenta todavia?<a  id ="cuenta" href="register.html"> Registrarse</a></p>
+      </div>
+    </form>
+  </div>
+  <script src="login.js"></script>
+</body>
 </html>
