--- a/register.html
+++ b/register.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,17 +9,21 @@
     <link rel='stylesheet' type='text/css' media='screen' href='styleR.css'>
     <script src='main.js'></script>
 </head>
+
 <body>
     <section class="form-registro">
         <h4>Registro</h4>
         <!-- campos de ingresar los datos y que sea obligatorio -->
-        <input class="diseño" type="text" name="nombres" id="nombres" placeholder="Nombre" required> 
-        <input class="diseño"  type="text" name="apellidos" id="apellidos" placeholder="Apellido" required>
+        <input class="diseño" type="text" name="nombres" id="nombres" placeholder="Nombre" required>
+        <input class="diseño" type="text" name="apellidos" id="apellidos" placeholder="Apellido" required>
         <input class="diseño" type="email" name="correo" id="correo" placeholder="Correo electrónico" required>
         <input class="diseño" type="password" name="contraseña" id="contraseña" placeholder="Contraseña" required>
         <p>Bienvenido</p>
         <input class="botons" type="submit" value="Registrarse">
-        <p><a href="#">¿Ya tiene una cuenta?</a></p>
+        <p>
+            <a id="existente" href="login.html">¿Ya tiene una cuenta?</a>
+        </p>
     </section>
 </body>
+
 </html>
