--- a/inicio.html
+++ b/inicio.html
@@ -25,14 +25,24 @@
 
       <!--Apartado de contraseña -->
       <div class="separador">
-        <div class="separacion2">
+        <div class="separacion">
             <h2 class="centrado">Contraseña:</h2>
-            <p>Ingrese la contraseña para poder realizar la encriptación o desencriptación.</p>
+            <p>Ingrese la contraseña para poder realizar</p>
+          <p>la encriptación o desencriptación.</p>
             <div>
                 <input class="label" type="text" placeholder="Contraseña" required>
             </div>
         </div>
+        <div class="separacion">
+          <h2 class="centrado">Contraseña:</h2>
+          <p>Ingrese la contraseña para poder realizar</p>
+          <p>la encriptación o desencriptación.</p>
+          <div>
+              <input class="label" type="text" placeholder="Contraseña" required>
+          </div>
+      </div>
     </div>
+    
 
     <!-- Apartado de cifrar -->
   <div class="separador">
