--- a/inicio.html
+++ b/inicio.html
@@ -86,7 +86,7 @@
       <p>
         Resultado:
       </p>
-      <textarea class="resultadoD" id="resultadoDescifrar" readonly></textarea rows="4" cols="50">
+      <textarea class="resultadoD" id="resultadoDescifrar" readonly></textarea>
     </div>
   </div>
 
