--- a/login.html
+++ b/login.html
@@ -7,12 +7,14 @@
   <title>Inicio de Sesión</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" type="text/css" media="screen" href="style.css" /> 
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <script src="main.js"></script>
 </head>
 <body>
   <div class="bloque-login">
-    <form action="">
-      <h1>Iniciar sesión</h1>
+    <form action="http://httpbin.org/post">
+      <h1 class="centrado">Iniciar sesión</h1>
       <div class="input-box">
         <input id="name" type="text" placeholder="Nombre" required>
         <i class='bx bx-user'></i>
@@ -21,6 +23,8 @@
         <input id="password" type="password" placeholder="Contraseña" required>
         <i class='bx bx-lock-alt'></i>
       </div>
+      <div class="g-recaptcha" data-sitekey="6Le1PcwpAAAAAEKj1dRFH5P2OT2Gmyq2pzi1GGRa"></div>
+      <br>
       <button id="submit" type="submit" class="btn">Confirmar</button>
       <div class="register-link">
         <p>¿No tienes cuenta todavia?<a  id ="cuenta" href="register.html"> Registrarse</a></p>
