--- a/inicio.html
+++ b/inicio.html
@@ -56,6 +56,8 @@
         <i class='bx bx-user'></i>
       </div>
       <button type="submit" id="btnCifrar" class="btn">Cifrar</button>
+      <br>
+      <button type="submit" id="btnLimpiarC" class="btn">Limpiar</button>
     </div>
     
     <!-- Apartado de decifrar -->
@@ -69,6 +71,8 @@
         <i class='bx bx-user'></i>
       </div>
       <button type="submit" id="btnDescifrar" class="btn">Descifrar</button>
+      <br>
+      <button type="submit" id="btnLimpiarD" class="btn">Limpiar</button>
     </div>
   </div>
 
