--- a/inicio.html
+++ b/inicio.html
@@ -7,6 +7,7 @@
   <title>Cifrado y Descifrado con AES</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' type='text/css' media='screen' href='styleI.css'>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
   <script src='inicio.js'></script>
 </head>
 
