Arreglos en captcha

--- a/public/pages/admin/inicio.html
+++ b/public/pages/admin/inicio.html
@@ -14,6 +14,7 @@
 <body>
   <!-- Apartado de encabezados -->
   <header>
+
     <h1 class="logo">Cifrado AES</h1>
     <nav>
       <ul class="nav__links">
@@ -97,7 +98,7 @@
 
   <!-- Apartado de pie de pagina -->
   <footer>   
-      <p class="text-center"><a href="https://i.pinimg.com/564x/82/59/95/8259952320fedccacae276ef0c8de0e5.jpg">&copy; 2024 Cifrado AES. Todos los derechos reservados.</a></p>
+      <p class="text-center"><a href="https://i.pinimg.com/564x/82/59/95/8259952320fedccacae276ef0c8de0e5.jpg" target="_blank">&copy; 2024 Cifrado AES. Todos los derechos reservados.</a></p>
       <ul class="footer-links">
       </ul>
   </footer>
