--- a/public/pages/register.html
+++ b/public/pages/register.html
@@ -17,7 +17,7 @@
         <input class="diseño" type="text" name="apellidos" id="apellidos" placeholder="Apellido" required>
         <input class="diseño" type="email" name="correo" id="correo" placeholder="Correo electrónico" required>
         <input class="diseño" type="password" name="contraseña" id="contraseña" placeholder="Contraseña" required>
-        <p>Bienvenido</p>
+        <p class="hidden error">Este correo ya se encuentra en uso.</p>
         <button class="botons" type="submit">Registrarse</button>
         <p>
             <a id="existente" href="/">¿Ya tiene una cuenta?</a>
