--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -11,27 +11,27 @@
 </head>
 <body>
   <div class="bloque-login">
-    <form action="http://httpbin.org/post" id="form-login">
+    <form action="" class="form-login" id="form-login">
       <h1 class="centrado">Iniciar sesión</h1>
       <div class="input-box">
-        <input id="name" type="text" placeholder="Nombre" required>
+        <input id="correo" type="email" placeholder="Correo" required>
         <i class='bx bx-user'></i>
       </div>
       <div class="input-box">
-        <input id="password" type="password" placeholder="Contraseña" required>
+        <input id="contraseña" type="password" placeholder="Contraseña" required>
         <i class='bx bx-lock-alt'></i>
       </div>
       <!-- <div class="g-recaptcha" data-sitekey="6Le1PcwpAAAAAEKj1dRFH5P2OT2Gmyq2pzi1GGRa"></div>-->
       <!-- <br> -->
       <p class="hidden error">Error al iniciar sesión.</p>
       <br>
-      <button id="submit" type="submit" class="btn">Confirmar</button>
+      <button id="btn-login" type="submit" class="btn">Confirmar</button>
       <div class="register-link">
         <p>¿No tienes cuenta todavia?<a  id ="cuenta" href="/register"> Registrarse</a></p>
       </div>
     </form>
   </div>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
-  <script src="login.js" defer></script>
+  <script src='login.js' defer></script>
 </body>
 </html>
