--- a/public/pages/admin/inicio.html
+++ b/public/pages/admin/inicio.html
@@ -18,7 +18,7 @@
     <h1 class="logo">Cifrado AES</h1>
     <nav>
       <ul class="nav__links">
-        <li><button>Cerrar Sesion</li>
+        <li><button  id="cerrar">Cerrar Sesion</li>
       </ul>
     </nav>
   </header>
